--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -4,11 +4,11 @@ schema:
 dataSources:
   - kind: ethereum
     name: SFC
-    network: sepolia
+    network: testnet
     source:
-      address: "0xa9F6D0DFf77b18D91D6256F5B1Ab69D10D3931e9"
+      address: "0xfc00face00000000000000000000000000000000"
       abi: SFC
-      startBlock: 4144116
+      startBlock: 1
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
