--- a/u2u-staking/subgraph.yaml
+++ b/u2u-staking/subgraph.yaml
@@ -54,4 +54,7 @@ dataSources:
           handler: handleUpdatedSlashingRefundRatio
         - event: Withdrawn(indexed address,indexed uint256,indexed uint256,uint256)
           handler: handleWithdrawn
+      callHandlers:
+        - function: stashRewards(address,uint256)
+          handler: handleStashRewards
       file: ./src/sfc.ts
