--- a/u2u-staking/package.json
+++ b/u2u-staking/package.json
@@ -7,7 +7,7 @@
     "deploy": "graph deploy --node https://api.thegraph.com/deploy/ u2u/sfc-subgraph",
     "create-local": "graph create --node http://localhost:8020/ u2u/sfc-subgraph",
     "remove-local": "graph remove --node http://localhost:8020/ u2u/sfc-subgraph",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 u2u/sfc-subgraph",
+    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 u2u/sfc-subgraph -l v0.0.1",
     "test": "graph test"
   },
   "dependencies": {
