--- a/u2u-network/package.json
+++ b/u2u-network/package.json
@@ -8,6 +8,9 @@
     "create-local": "graph create --node http://localhost:8020/ u2u/sfc-network",
     "remove-local": "graph remove --node http://localhost:8020/ u2u/sfc-network",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 u2u/sfc-network",
+    "create-local-test": "graph create --node http://localhost:8020/ u2u/sfc-network-test",
+    "remove-local-test": "graph remove --node http://localhost:8020/ u2u/sfc-network-test",
+    "deploy-local-test": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 u2u/sfc-network-test",
     "test": "graph test"
   },
   "dependencies": {
