--- a/u2u-network/subgraph.yaml
+++ b/u2u-network/subgraph.yaml
@@ -8,7 +8,7 @@ dataSources:
     source:
       address: "0xfc00face00000000000000000000000000000000"
       abi: SFC
-      startBlock: 15400000
+      startBlock: 1
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
