--- a/u2u-staking/package.json
+++ b/u2u-staking/package.json
@@ -8,6 +8,9 @@
     "create-local": "graph create --node http://localhost:8020/ u2u/sfc-subgraph",
     "remove-local": "graph remove --node http://localhost:8020/ u2u/sfc-subgraph",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 u2u/sfc-subgraph -l v0.0.1",
+    "create-local-v2": "graph create --node http://localhost:8020/ u2u/sfc-subgraph-v2",
+    "remove-local-v2": "graph remove --node http://localhost:8020/ u2u/sfc-subgraph-v2",
+    "deploy-local-v2": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 u2u/sfc-subgraph-v2 -l v0.0.1",
     "test": "graph test"
   },
   "dependencies": {
