--- a/u2u-network/subgraph.template.yaml
+++ b/u2u-network/subgraph.template.yaml
@@ -4,7 +4,7 @@ schema:
 dataSources:
   - kind: ethereum
     name: SFC
-    network: "testnet"
+    network: "{{network}}"
     source:
       address: "0xfc00face00000000000000000000000000000000"
       abi: SFC
